syntax = "proto3";
package user.private.cache;

option go_package = "github.com/go-saas/kit/user/private/biz;biz";

message UserMigrationTask{
  string id=1;

  string admin_email=7;
  string admin_username=8;
  string admin_password=9;
  string admin_user_id=10;
}